Updated download link.

--- a/sami/theme/layout/layout.twig
+++ b/sami/theme/layout/layout.twig
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbar-elements">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ path('index.html') }}">Home</a></li>
-                    <li><a href="{{ path('https://github.com/code-drop/Circle-CLI') }}">Download</a></li>
+                    <li><a href="https://github.com/code-drop/Circle-CLI">Github / Download</a></li>
                     <li><a href="{{ path('classes.html') }}">Classes</a></li>
                     <li><a href="{{ path('doc-index.html') }}">Index</a></li>
                     <li><a href="{{ path('search.html') }}">Search</a></li>
