Fixed installation instructions.

--- a/sami/theme/intro.twig
+++ b/sami/theme/intro.twig
@@ -25,7 +25,7 @@ cp vendor/codedrop/circle-cli/circle-cli.yml ~/
 
     <pre>
 # Copy the sample private file, then add your token to this file.
-cp vendor/codedrop/circle-cli/circle-cli.private.yml.sample ./
+cp vendor/codedrop/circle-cli/circle-cli.private.yml.sample circle-cli.private.yml
     </pre>
 
     <h2>Configuration</h2>
