--- a/sami/theme/intro.twig
+++ b/sami/theme/intro.twig
@@ -20,7 +20,7 @@
 composer require "codedrop/circle-cli ~1.0"
 
 # Copy the sample config file into your home directory (or your project)
-cp vendor/codedrop/circle-cli/circle-cli.yml ~/
+cp vendor/codedrop/circle-cli/circle-cli.yml.sample ~/circle-cli.yml
     </pre>
 
     <pre>
