--- a/sami/theme/intro.twig
+++ b/sami/theme/intro.twig
@@ -17,15 +17,15 @@
 
     <h2>Install with composer</h2>
     <pre>
-composer require "codedrop/circle-cli ~1.0"
+composer require "code-drop/circle-cli ~1.0"
 
 # Copy the sample config file into your home directory (or your project)
-cp vendor/codedrop/circle-cli/circle-cli.yml.sample ~/circle-cli.yml
+cp vendor/code-drop/circle-cli/circle-cli.yml.sample ~/circle-cli.yml
     </pre>
 
     <pre>
 # Copy the sample private file, then add your token to this file.
-cp vendor/codedrop/circle-cli/circle-cli.private.yml.sample circle-cli.private.yml
+cp vendor/code-drop/circle-cli/circle-cli.private.yml.sample circle-cli.private.yml
     </pre>
 
     <h2>Configuration</h2>
